(ENHANCE) Port the Compare Revisions dialog to Ttk
(ENHANCE) Port the Revision control Lock and Unlock dialogs to Ttk
(ENHANCE) Port the 'Check In' dialog to Ttk
(ENHANCE) Port the 'Check Out' dialog to Ttk
(BUGFIX) Fix invoking the "Revision Control Editor" dialog
(INTERNAL) Removed sn_motif_buttons
(ENHANCE) Changed all sn_motif_buttons calls to sn_ttk_buttons
(INTERNAL) Removed tk_dialog as it is no longer used
(ENHANCE) Changed all tk_dialog calls to TtkDialog::ttk_dialog
(ENHANCE) Port the error that appears when parsing a file fails to ttk_dialog
(INTERNAL) Removed tk_dialog_with_widgets as it is no longer used
(BUGFIX) Used ttk_dialog_with_widgets without putting the namespace
(ENHANCE) Made the "Source-Navigator has found more than one match" warning use ttk_dialog_with_widges
(ENHANCE) Made sn_error_dialog use TtkDialog::MessageBox
(INTERNAL) Port sn_wait_dialog to use sn_ttk_buttons
(ENHANCE) Port the "About" dialog to Ttk
(BUGFIX) Forgot that someone may want to resize the "Abbreviations" dialog
(ENHANCE) Port the "Abbreviations" dialog to Ttk, now with scrollbar
(ENHANCE) Port the 'Find-Replace' dialog to Ttk
(ENHANCE) Port the 'Find dialog' to Ttk
(ENHANCE) Port the 'go to line' dialog to Ttk
(ENHANCE) Port the window with the progressbar when creating a new project
(ENHANCE) Port Tk's choose color dialog to Ttk Widgets
(ENHANCE) Port the 'preferences' dialog to Ttk widgets
(BUGFIX) Fix the 'Delete' button in the start dialog in Windows
(BUGFIX) Fix the way the Tree widget talks to vertical Ttk scrollbars
(ENHANCE) Port the 'choose directory' dialog to Ttk widgets
(INTERNAL) Create a sn_ttk_buttons proc to substitute sn_motif_buttons
(INTERNAL) Change the dialog that pops up with Tcl/Tk errors to Ttk
(ENHANCE) Ported the 'delete project' question dialog to Ttk
(ENHANCE) Ported the 'new project' dialog to use Ttk widgets
(ENHANCE) Update the project management window to use Ttk widgets
(INTERNAL) Add tile extension for Ttk widgets support